Changes 0.9.6.4 -> 
* NodeManager could not find matching oustanding requests if the state object
  was null.
* Node.waitForConnectionTimeout() and NodeManager.waitForConnectionTimeout()
  methods added.

Changes 0.9.6.3 -> 0.9.6.4
* Fix regression in 0.9.6.3:
  - ConcurrentModificationException when talking to silent peer
  - Bugfix when connect() connects imediately. (solaris)
  Both regressions were due to my fat fingers and subversion happily
  accepting changes to tags.

Changes 0.9.6.? -> 0.9.6.3
* Made more robust when calling Node.findConnection/sendMessage/... when the
  node has not been started.

Changes 0.9.6.1 -> 0.9.6.2
* If a peer accepted the connection, but never replied to CER, then a
  ConcurrentModificationException was thrown when the connection timed out.
* Local connections on Solaris lead to corner case where NIO behaves
  "interestingly" and the stack became non-functional.

Changes 0.9.6 -> 0.9.6.1
* File descriptor leak when a persistent peer had a name that could not be
  looked up in DNS.
* DCC examples no longer announce credit-control application as a supported
  accounting application.

Changes 0.9.5 -> 0.9.6
* Handle SCTP association restart correctly.
* Node.findConnection() could return connection keys for connections there were
  not in the "open" state, potentially leading to NPE if a client immediately
  tried using it.
* Logging in Node changed a bit to make failure to load SCTP support look less
  dangerous.
* Do not attempt to send DWR on non-ready connections.
* Timeout&close non-ready connections.

Changes 0.9.4 -> 0.9.5
* SCTP support
* CER election phase could easily fail.
* Improved handling of M-bit in grouped AVPs in dk.i1.diameter.Utils
* Implemented DW interval jitter as per rfc3539 section 3.4.1 item 1

Changes 0.9.4 -> 0.9.4.1
* M-bit was not set on AVPs inside Vendor-Specific-Application-Id

Changes 0.9.3 -> 0.9.4
* Examines result-code in CEA and acts on it.